[KCC] changing Helm member-iam solution according to comments

--- a/config-connector/solutions/iam/helm/member-iam/templates/iampolicymember.yaml
+++ b/config-connector/solutions/iam/helm/member-iam/templates/iampolicymember.yaml
@@ -17,9 +17,9 @@ kind: IAMPolicyMember
 metadata:
   name: project-iam-member
 spec:
-  member: "serviceAccount:{{ .Values.IAM.Member }}@{{ .Values.ProjectID }}.iam.gserviceaccount.com"
-  role: {{ .Values.Role }}
+  member: "serviceAccount:{{ .Values.iamPolicyMember.iamMember }}@{{ required "Desired Project ID is required" .Values.projectID }}.iam.gserviceaccount.com"
+  role: {{ .Values.role }}
   resourceRef:
     apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
     kind: Project
-    external: "projects/{{ .Values.ProjectID }}"
+    external: "projects/{{ required "Desired Project ID is required"  .Values.projectID }}"
