--- a/config-connector/solutions/iam/helm/member-iam/templates/iamserviceaccount.yaml
+++ b/config-connector/solutions/iam/helm/member-iam/templates/iamserviceaccount.yaml
@@ -15,4 +15,4 @@
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
 metadata:
-  name: {{ .Values.IAM.Member }}
+  name: {{ .Values.iamPolicyMember.iamMember }}
