--- a/config-connector/solutions/projects/helm/project-services/templates/service.yaml
+++ b/config-connector/solutions/projects/helm/project-services/templates/service.yaml
@@ -14,4 +14,6 @@
 apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
 kind: Service
 metadata:
+  annotations:
+    cnrm.cloud.google.com/project-id: {{ .Values.ProjectID }}
   name: {{ .Values.Service.Name }}
