--- a/infra/terraform/test-org/org-iam-policy/cloudbuild.yaml
+++ b/infra/terraform/test-org/org-iam-policy/cloudbuild.yaml
@@ -13,6 +13,12 @@
 # limitations under the License.
 
 steps:
+  - name: 'bash'
+    dir: 'infra/terraform/test-org/org-iam-cleaner'
+    args: ['ls -la']
+  - name: 'bash'
+    dir: 'infra/terraform/test-org/org-iam-cleaner'
+    args: ['pwd']
   - name: 'gcr.io/cloud-foundation-cicd/$_DOCKER_IMAGE_DEVELOPER_TOOLS:$_DOCKER_TAG_VERSION_DEVELOPER_TOOLS'
     dir: 'infra/terraform/test-org/org-iam-cleaner'
     id: 'terraform-init'
