--- a/infra/terraform/test-org/org-iam-policy/cloudbuild.yaml
+++ b/infra/terraform/test-org/org-iam-policy/cloudbuild.yaml
@@ -14,6 +14,8 @@
 
 steps:
   - name: 'bash'
+    args: ['ls', '-la']
+  - name: 'bash'
     dir: 'infra/terraform/test-org/org-iam-cleaner'
     args: ['ls', '-la']
   - name: 'bash'
