--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -26,7 +26,7 @@ jobs:
         run: |-
           LAST_VERSION=$(curl --silent "${{env.RELEASE_URL}}" | \
             jq --raw-output .tag_name)
-          echo ::set-env name=LAST_VERSION::$LAST_VERSION
+          echo "LAST_VERSION=${LAST_VERSION}" >> $GITHUB_ENV
 
       - name: Build
         working-directory: ./cli
@@ -44,7 +44,7 @@ jobs:
         working-directory: ./cli
         run: |-
           CURRENT_VERSION=$(./bin/cft-linux-amd64 version)
-          echo ::set-env name=CURRENT_VERSION::$CURRENT_VERSION
+          echo "CURRENT_VERSION=${CURRENT_VERSION}" >> $GITHUB_ENV
 
       - name: Release new version
         if: env.LAST_VERSION != env.CURRENT_VERSION
