--- a/infra/terraform/test-org/ci-foundation/cloudbuild.yaml
+++ b/infra/terraform/test-org/ci-foundation/cloudbuild.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+timeout: 3600s
 steps:
   - name: 'gcr.io/cloud-foundation-cicd/$_DOCKER_IMAGE_DEVELOPER_TOOLS:$_DOCKER_TAG_VERSION_DEVELOPER_TOOLS'
     dir: 'infra/terraform/test-org/ci-foundation'
