set project as subst

--- a/infra/terraform/test-org/ci-foundation/cloudbuild.yaml
+++ b/infra/terraform/test-org/ci-foundation/cloudbuild.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Google LLC
+# Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -21,3 +21,5 @@ steps:
 substitutions:
   _DOCKER_IMAGE_DEVELOPER_TOOLS: 'cft/developer-tools'
   _DOCKER_TAG_VERSION_DEVELOPER_TOOLS: '1.1'
+env:
+- 'FOUNDATION_CICD_PROJECT=$_FOUNDATION_CICD_PROJECT'
