--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -5,13 +5,13 @@ on:
     branches:
       - 'master'
     paths:
-      - 'cli'
+      - 'cli/**'
       - '.github/workflows/**'
   pull_request:
     branches:
       - 'master'
     paths:
-      - 'cli'
+      - 'cli/**'
       - '.github/workflows/**'
 
 concurrency:
