--- a/.github/workflows/build-push-cft-devtools.yml
+++ b/.github/workflows/build-push-cft-devtools.yml
@@ -14,13 +14,23 @@ jobs:
     name: Build and push new CFT dev tools image
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
       - uses: actions/checkout@v2
 
-      - uses: google-github-actions/setup-gcloud@master
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v0.4.2'
         with:
-          version: "286.0.0"
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: '${{ env.GCP_WIF_PROVIDER }}'
+          service_account: '${{ env.GCP_WIF_SA_EMAIL }}'
+
+      - uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          version: "366.0.0"
           project_id: ${{ env.PROJECT_ID }}
 
       - name: Build
