--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -17,10 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: google-github-actions/setup-gcloud@master
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v0.4.2'
         with:
-          version: "286.0.0"
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: '${{ env.GCP_WIF_PROVIDER }}'
+          service_account: '${{ env.GCP_WIF_SA_EMAIL }}'
+
+      - uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          version: "366.0.0"
 
       - name: Retrieve last released version
         run: |-
