--- a/.github/workflows/build-push-cft-devtools.yml
+++ b/.github/workflows/build-push-cft-devtools.yml
@@ -25,8 +25,8 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0.4.2'
         with:
-          workload_identity_provider: '${{ env.GCP_WIF_PROVIDER }}'
-          service_account: '${{ env.GCP_WIF_SA_EMAIL }}'
+          workload_identity_provider: '${{ secrets.GCP_WIF_PROVIDER }}'
+          service_account: '${{ secrets.GCP_WIF_SA_EMAIL }}'
 
       - uses: google-github-actions/setup-gcloud@v0.3.0
         with:
