--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -21,6 +21,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '~1.16'
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
