chore: allow running workflow through UI

--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -2,6 +2,7 @@ name: Update Tooling
 on:
   schedule:
     - cron: "0 2 * * *"
+  workflow_dispatch:
 
 env:
   TERRAFORM_URL: "https://api.github.com/repos/hashicorp/terraform/releases/latest"
