fix: update release-please for blueprint-test

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,7 @@
 {
   "separate-pull-requests": true,
+  "tag-separator": "/",
+  "include-component-in-tag": true,
   "packages": {
     "infra/blueprint-test": {
       "release-type": "go",
