--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -8,7 +8,7 @@ env:
   TERRAFORM_URL: "https://api.github.com/repos/hashicorp/terraform/releases/latest"
   CLOUD_SDK_URL: "https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz"
   KPT_URL: "https://api.github.com/repos/GoogleContainerTools/kpt/releases"
-  CFT_CLI_URL: "https://api.github.com/repos/GoogleCloudPlatform/cloud-foundation-toolkit/releases/latest"
+  CFT_CLI_URL: "https://api.github.com/repos/GoogleCloudPlatform/cloud-foundation-toolkit/releases"
 
 jobs:
   update-tools:
@@ -33,6 +33,9 @@ jobs:
             elif [ "$tool" == "KPT" ]; then
               # get latest release including pre-releases for kpt, excluding releases of porch
               LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output '[ .[] | select( .tag_name | contains("porch/") | not )][0].tag_name' | tr -d "v")
+            elif [ "$tool" == "CFT_CLI" ]; then
+              # get latest CFT_CLI release
+              LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output '[ .[] | select( .name | contains("CLI Release"))][0].tag_name' | tr -d "v")
             else
               LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output .tag_name | tr -d "v")
             fi
