fix: update infra/blueprint-test release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
     "infra/blueprint-test": {
       "release-type": "go",
       "package-name": "blueprint-test",
+      "component": "infra/blueprint-test",
       "bump-minor-pre-major": true,
       "release-as": "0.0.1"
     }
