--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -9,6 +9,8 @@ env:
   CLOUD_SDK_URL: "https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz"
   KPT_URL: "https://api.github.com/repos/GoogleContainerTools/kpt/releases"
   CFT_CLI_URL: "https://api.github.com/repos/GoogleCloudPlatform/cloud-foundation-toolkit/releases"
+  KUBECTL_MINOR: "1.23"
+  KUBECTL_URL: "https://api.github.com/repos/kubernetes/kubernetes/releases"
 
 jobs:
   update-tools:
@@ -20,7 +22,7 @@ jobs:
           PR_UPDATE_BODY=""
           newline=$'\n'
           # Skip "KPT" till resolved: https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/1190
-          tools=("TERRAFORM" "CLOUD_SDK" "CFT_CLI")
+          tools=("TERRAFORM" "CLOUD_SDK" "CFT_CLI" "KUBECTL")
 
           for tool in ${tools[@]}
           do
@@ -37,6 +39,9 @@ jobs:
             elif [ "$tool" == "CFT_CLI" ]; then
               # get latest CFT_CLI release
               LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output '[ .[] | select( .name | contains("CLI Release"))][0].tag_name' | tr -d "v")
+            elif [ "$tool" == "KUBECTL" ]; then
+              # get latest KUBECTL_MINOR release
+              LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output '[ .[] | select( .name | contains("'${KUBECTL_MINOR}'"))][0].tag_name' | tr -d "v")
             else
               LATEST_TOOL_VERSION=$(curl -s ${!TOOL_URL} | jq --raw-output .tag_name | tr -d "v")
             fi
