--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -90,6 +90,5 @@ jobs:
             Updated tools to ${{env.NEW_IMG_VERSION}}
             ${{env.PR_UPDATE_BODY}}
           labels: automated pr
-          assignees: bharathkkb,morgante
-          reviewers: morgante
+          reviewers: bharathkkb, apeabody
           branch: create-pull-request/patch-tools-version
