chore: validate tool version isn't missing
more robust

--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -56,7 +56,7 @@ jobs:
             # update tool version in Makefile if not latest
             if [ "$CURRENT_TOOL_VERSION" == "$LATEST_TOOL_VERSION" ]; then
               echo "${tool} is latest"
-            elif [ -z "$CURRENT_TOOL_VERSION" || "$CURRENT_TOOL_VERSION" == "" || "$CURRENT_TOOL_VERSION" == "null" ]; then
+            elif [[ -z "$CURRENT_TOOL_VERSION" || "$CURRENT_TOOL_VERSION" == "" || "$CURRENT_TOOL_VERSION" == "null" ]]; then
               echo "${tool} version is missing"
             else
               echo "${tool} needs to be updated to ${LATEST_TOOL_VERSION}"
