--- a/.github/workflows/build-push-cft-devtools.yml
+++ b/.github/workflows/build-push-cft-devtools.yml
@@ -19,18 +19,18 @@ jobs:
       id-token: 'write'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v0.4.2'
+        uses: 'google-github-actions/auth@v1.0.0'
         with:
           workload_identity_provider: '${{ secrets.GCP_WIF_PROVIDER }}'
           service_account: '${{ secrets.GCP_WIF_SA_EMAIL }}'
 
-      - uses: google-github-actions/setup-gcloud@v0.3.0
+      - uses: google-github-actions/setup-gcloud@v1.0.1
         with:
-          version: "366.0.0"
+          version: "410.0.0"
           project_id: ${{ env.PROJECT_ID }}
 
       - name: Build
@@ -44,7 +44,7 @@ jobs:
 
       - name: Open issue if failed
         if: ${{ failure() }}
-        uses: actions/github-script@9ac08808f993958e9de277fe43a64532a609130e
+        uses: actions/github-script@v6.3.3
         with:
           script: |-
               github.rest.issues.create({
