--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -13,6 +13,7 @@ env:
   KUBECTL_URL: "https://api.github.com/repos/kubernetes/kubernetes/releases"
   GATOR_MINOR: "3.9"
   GATOR_URL: "https://api.github.com/repos/open-policy-agent/gatekeeper/releases"
+  GCRANE_URL: "https://api.github.com/repos/google/go-containerregistry/releases"
 
 jobs:
   update-tools:
@@ -24,7 +25,7 @@ jobs:
           PR_UPDATE_BODY=""
           newline=$'\n'
           # Skip "KPT" till resolved: https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/1190
-          tools=("TERRAFORM" "CLOUD_SDK" "CFT_CLI" "KUBECTL" "GATOR")
+          tools=("TERRAFORM" "CLOUD_SDK" "CFT_CLI" "KUBECTL" "GATOR" "GCRANE")
 
           for tool in ${tools[@]}
           do
