--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,6 +16,7 @@
      "stabilityDays":0
   },
   "separateMajorMinor":false,
+  "ignorePaths": ["infra/concourse/**"],
   "packageRules": [
     {
       "matchPaths": [".github/**"],
