chore: add cloud-foundation-bot and renovate-bot (#1387)

--- a/.github/trusted-contribution.yml
+++ b/.github/trusted-contribution.yml
@@ -19,4 +19,6 @@ trustedContributors:
   - release-please[bot]
   - renovate[bot]
   - forking-renovate[bot]
+  - renovate-bot
   - dependabot[bot]
+  - cloud-foundation-bot
