fix: updates cli tagging for automatic upload to go docs

--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -77,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.CURRENT_VERSION }}
+          tag_name: cli/${{ env.CURRENT_VERSION }}
           release_name: CLI Release ${{ env.CURRENT_VERSION }}
           draft: false
           prerelease: false
