--- a/cli/testdata/bpmetadata/schema/invalid-metadata.yaml
+++ b/cli/testdata/bpmetadata/schema/invalid-metadata.yaml
@@ -3,5 +3,5 @@ kind: BlueprintMetadata
 metadata:
   name: terraform-google-module  
 spec:
-  title: Terraform Google Module
-
+  info:
+    title: Terraform Google Module
