--- a/cli/testdata/bpmetadata/schema/valid-metadata-w-enum.yaml
+++ b/cli/testdata/bpmetadata/schema/valid-metadata-w-enum.yaml
@@ -1,13 +1,14 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-google-module  
+  name: terraform-google-module
 spec:
-  title: Terraform Google Module
-  source:
-    repo: https://github.com/GoogleCloudPlatform/terraform-google-module.git
-    sourceType: git
-  quotaDetails:
-  - type: GCE_INSTANCE
-    quotaType:
-      MACHINE_TYPE: "n1-standard-8"
+  info:
+    title: Terraform Google Module
+    source:
+      repo: https://github.com/GoogleCloudPlatform/terraform-google-module.git
+      sourceType: git
+    quotaDetails:
+    - type: GCE_INSTANCE
+      quotaType:
+        MACHINE_TYPE: "n1-standard-8"
