--- a/cli/testdata/bpmetadata/schema/valid-metadata.yaml
+++ b/cli/testdata/bpmetadata/schema/valid-metadata.yaml
@@ -1,9 +1,10 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-google-module  
+  name: terraform-google-module
 spec:
-  title: Terraform Google Module
-  source:
-    repo: https://github.com/GoogleCloudPlatform/terraform-google-module.git
-    sourceType: git
+  info:
+    title: Terraform Google Module
+    source:
+      repo: https://github.com/GoogleCloudPlatform/terraform-google-module.git
+      sourceType: git
