--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,6 +18,8 @@ on:
   pull_request:
     branches:
       - 'master'
+    paths:
+      - "infra/terraform/**"
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
