--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,6 +20,7 @@ on:
       - 'master'
     paths:
       - "infra/terraform/**"
+      - ".github/workflows/lint.yaml"
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
